--- a/Hacker.html
+++ b/Hacker.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="index.html">
     
 </head>
-<li><a href="index.html">Voltar</a></li>
+<div class="botao">
+    <li><a href="index.html">Voltar</a></li>
+    </div>
 <body>
     <h1>Como ser um hacker</h1>
     <p>Há algumas estratégias que podem contribuir para o início de sua carreira como hacker. A primeira delas é escolher qual curso fazer. Não há um curso superior específico nesse assunto. Desta forma, você pode começar por uma área mais generalista, como: </p>
@@ -19,4 +21,7 @@
     <p>Nele, você aprenderá na prática, por meio de projetos reais e mentoria de hackers de grandes empresas do mercado, a criar ambientes virtuais mais seguros, prevenindo ou dificultando a probabilidade de acessos não autorizados a certas informações por meio de testes, e mitigando os impactos destes incidentes com técnicas de perícia e planos de reconstrução.</p>
     
 </body>
+<footer>
+    <p>Desenvolvido por Pedro e João</p>
+  </footer>
 </html>
