--- a/Passos.html
+++ b/Passos.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="estilo.css">
     <title>Passos</title>
 </head>
+<div class="botao">
 <li><a href="index.html">Voltar</a></li>
+</div>
 <body>
     <h1>Como posso me tornar um hacker e trabalhar com Segurança da Informação?</h1>
     <p>É importante ressaltar que a profissão está em alta. De acordo com 24ª edição do relatório de Ameaças à Segurança na Internet (ISTR, na sigla em inglês, Internet Security Threat Report), produzida em 2020, o Brasil é o quarto país com mais invasões de hackers e crimes virtuais entre os 157 países analisados.
@@ -26,4 +28,7 @@
     <p>Há algumas estratégias que podem contribuir para o início de sua carreira como hacker. A primeira delas é escolher qual curso fazer. Não há um curso superior específico nesse assunto.</p>
     
 </body>
+<footer>
+    <p>Desenvolvido por Pedro e João</p>
+  </footer>
 </html>
