--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="Hacker.html">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital@1&display=swap" rel="stylesheet">
 </head>
+<div class="fixo">
+<div class="logo">
+  <img class="img_logo" src="img/OIP.ico" alt="">
+</div>
+</div>
+<li><a class="active" href="#home">Home</a></li>
 <li><a href="software.html">Software</a></li>
 <li><a href="Passos.html">Passos</a></li>
 <li><a href="Hacker.html">Hacker</a></li>
@@ -34,7 +40,7 @@
     <ul>onde a mitigação de riscos é necessária, selecionando ou projetando controles de segurança apropriados e implementando-os</ul>
     <ul>monitorar as atividades, fazendo os ajustes necessários para resolver quaisquer problemas, mudanças e oportunidades de melhoria</ul>
   <h2>Como ser um hacker e trabalhar com Segurança da Informação</h2>
-  <img src="img/seguranca-da-informacao.jpg" alt="">
+  <img class="esquerda" src="img/código-de-programação-no-tela-de-computador-65029125.jpg" alt="">
   <p>‘Hacker’. Uma palavra que desperta curiosidade e medo no contexto de uma sociedade cada vez mais conectada e que, consequentemente, expõe com mais frequência seus dados e informações particulares na internet. 
 
     A origem do termo vem lá dos anos 50 e 60, quando um hack era apenas uma solução criativa para qualquer problema. No início da Era Digital, Hacker tornou-se sinônimo de pessoas que anonimamente invadem sistemas de emails e sites. 
@@ -47,4 +53,7 @@
 
         Desta forma, a cibersegurança tem se tornado uma prioridade de empresas nacionais, que têm contratado hackers para garantir a segurança de seus sistemas e dados. Claro, como muitas carreiras, não é fácil começar no campo, mas se você se esforçar, poderá moldar uma carreira muito lucrativa. Segundo a consultoria Robert Half, especializada em recrutamentos, as empresas costumam pagar entre R$ 3,1 mil (para o cargo de analista) e R$ 22 mil (entre os gerentes de segurança).</p>
 </body>
+<footer>
+  <p>Desenvolvido por Pedro e João</p>
+</footer>
 </html>
