--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,7 @@
     <title>CONTATO</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="index.html">
+    <link rel="stylesheet" href="code.js">
     
 </head>
 <li><a href="index.html">Voltar</a></li>
