--- a/software.html
+++ b/software.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="estilo.css">
     <title>Software</title>
 </head>
-<li><a href="index.html">Voltar</a></li>
+<div class="botao">
+    <li><a href="index.html">Voltar</a></li>
+    </div>
 <body>
     <h1>Software utilizado pelos hackers</h1>
     <h2>Kali Linux</h2>
@@ -22,4 +24,7 @@
 
 
 </body>
+<footer>
+    <p>Desenvolvido por Pedro e João</p>
+  </footer>
 </html>
